@@ -1,4 +1,4 @@
-from fake_filesystem import FakeOsModule
+from fake_filesystem import FakeOsModule, FakeFileOpen
 from play.api import application
 from unittest.mock import Mock, patch
 
@@ -43,3 +43,28 @@ def test_path_validator_valid_path(file_system):
         validator._error = Mock()
         validator._validate_path(True, 'field', '/tmp/open/')
     assert validator._error.call_count == 0
+
+
+def test_sentdfile_partial_no_range_header(testapp_api, file_system):
+    with patch('flask.helpers.os', FakeOsModule(file_system), create=True):
+        with patch('flask.helpers.open', FakeFileOpen(file_system), create=True):
+            with testapp_api.app.test_request_context('/stream/123123123123123123123123'):
+                response = application.send_file_partial(
+                    '/tmp/media/Album/John Bovi/01.mp3', 'etag-Test')
+    assert response.headers['ETag'] == '"etag-Test"'
+    assert response.direct_passthrough is True
+    assert b'Some_content' in list(response.response)
+
+
+def test_send_file_partial_with_range_header(testapp_api, file_system):
+    with patch.object(application, 'os', FakeOsModule(file_system), create=True):
+        with patch.object(application, 'open', FakeFileOpen(file_system), create=True):
+            with testapp_api.app.test_request_context('/stream/123123123123123123123123',
+                                                      headers=[('Range', '1-12')]):
+                response = application.send_file_partial(
+                    '/tmp/media/Album/John Bovi/01.mp3', 'etag-Test')
+    assert response.headers['ETag'] == '"etag-Test"'
+    assert response.headers['Content-Range'] == 'bytes 1-11/12'
+    assert response.headers['Cache-Control'] == 'no-cache'
+    assert response.direct_passthrough is True
+    assert b'ome_content' in list(response.response)
